...
            let cell = tableView.dequeueReusableCell(
                withIdentifier: standardCell, for: indexPath)

            let email = accounts[(indexPath as NSIndexPath).row].user.address
            cell.textLabel?.text = String(
                format: NSLocalizedString(
                    "Inbox (%@)", comment: "Table view label for an inbox for an account"), email)
            cell.imageView?.image = UIImage(named: "folders-icon-inbox")
            cell.accessoryType = .disclosureIndicator

            return cell
        } else {
            let cell = tableView.dequeueReusableCell(withIdentifier: standardCell, for: indexPath)
...
