...
        showEmptyDetailViewIfApplicable(message: message)
    }

    private func initialConfig() {
        folderVM = FolderViewModel()
        folderVM?.delegate = self
        title = NSLocalizedString("Mailboxes", comment: "FoldersView navigationbar title")
        //Table view
        tableView.estimatedRowHeight = 44.0
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedSectionHeaderHeight = 80.0
        tableView.sectionHeaderHeight = UITableView.automaticDimension
        tableView.cellLayoutMarginsFollowReadableWidth = false
...
