...

    private var hasRecipients: Bool {
        let allRecipients = state.toRecipients + state.ccRecipients + state.bccRecipients
        return !allRecipients.isEmpty
    }

    /// IndexPath of "Subject" VM
    private var indexPathSubjectVm: IndexPath {
        let subjectSection = section(for: .subject)
        guard
            let vm = subjectSection?.rows.first,
            let idxSubject = indexPath(for: vm)
        else {
...
        }
        let title: String
        if data.isDrafts {
            title = NSLocalizedString("Save changes", comment:
                                        "ComposeTableView: button to decide to save changes made on a drafted mail.")
        } else {
            title = NSLocalizedString("Save Draft", comment: "compose email save")
        }
        return title
    }

    public var keepInOutboxActionTitle: String {
        return NSLocalizedString("Keep in Outbox", comment:
                                    "ComposeTableView: button to decide to Discharge changes made on a mail in outbox.")
    }

    public var cancelActionTitle: String {
        return NSLocalizedString("Cancel", comment: "compose email cancel")
    }

    //!!!: Dirty hack. Works around a mess in Session.main, caused by creating and using of
    //messageToSend in/for TrustmanagementVC (which is supposed to use an independent Session
    // but leaves leftovers that makes commiting the Session impossible).
    private func rollbackMainSession() {
...
