...
    func updateStopTrustingButtonTitle() {
        if !showStopStartTrustButton {
            return
        }

        let titleMistrusted = NSLocalizedString(
            "Start Trusting",
            comment: "Stop/trust button in handshake overview")
        let titleTrusted = NSLocalizedString(
            "Stop Trusting",
            comment: "Stop/trust button in handshake overview")

        if viewModel?.partnerColor == PEPColor.red ||
            viewModel?.partnerRating == .haveNoKey {
            startStopTrustingButton.setTitle(titleMistrusted, for: .normal)
        } else {
...
