...
        removeGestureRecognizers()

        let gesture = UITapGestureRecognizer(target: self, action: #selector(trustwordsLabelPressed))
        trustwordsLabel.addGestureRecognizer(gesture)

        //Confirm Button
        let confirmTitle = NSLocalizedString("Confirm",
                                             comment: "Confirm correct trustwords/PGP fingerprint")
        confirmButton.setTitle(confirmTitle, for: .normal)

        //Decline Button
        let declineTitle = NSLocalizedString("Decline",
                                             comment: "Incorrect trustwords/PGP fingerprint")
...
