...
                                        <action selector="didPressCancel:" destination="iN0-l3-epB" eventType="touchUpInside" id="Sxe-7e-nN9"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OIj-9x-l85">
                                    <rect key="frame" x="373.5" y="234" width="36" height="33"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                    <state key="normal" title="Next">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </state>
                                    <state key="disabled">
                                        <color key="titleColor" red="0.95866558837166638" green="0.95615552985294527" blue="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                    </state>
                                    <connections>
...
                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="9fb-qy-5Z9">
                                            <rect key="frame" x="0.0" y="76.5" width="300" height="328"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="line" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fNB-Pm-68I" customClass="AnimatedPlaceholderTextfield" customModule="pEpForiOS" customModuleProvider="target">
                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="36"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="email"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="36" id="eX7-2m-u4a"/>
                                                    </constraints>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
...
                                                    <accessibility key="accessibilityConfiguration" identifier="email"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="36" id="Yu6-4o-pY5"/>
                                                    </constraints>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" textContentType="password"/>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                            <color key="value" red="0.7843137255" green="0.95294117649999999" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                            <real key="value" value="2"/>
...
